# HiveMind

./: .env.example  .gitignore  .mcp.json  README.md  README_CN.md  README_EN.md  SPONSOR.md  pyproject.toml
src/hivemind/: __init__.py  config.py  context.py  server.py
src/hivemind/commander/: __init__.py  arbiter.py  intent_refiner.py  lifecycle.py  rule_engine.py  state_manager.py  task_router.py
src/hivemind/executors/: __init__.py  base.py  file_ops.py  http_ops.py  shell_ops.py
src/hivemind/gateway/: __init__.py  audit.py  auth.py  injection.py  rate_limiter.py  semantic_classifier.py  structural_guard.py
src/hivemind/memory/: __init__.py  consistency.py  facade.py  long_term.py  procedural.py  short_term.py  working.py
src/hivemind/observability/: __init__.py  logger.py  metrics.py
src/hivemind/verification/: __init__.py  base.py  pipeline.py  result_check.py  security_check.py  syntax_check.py
tests/: __init__.py  test_gateway.py  test_lifecycle_v2.py  test_memory_system.py  test_procedural_memory.py  test_rule_engine.py  test_verification.py  verify.py
