[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hivemind-mcp"
version = "0.1.0"
description = "HiveMind External Commander Framework — MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12",
    "pydantic>=2.0",
    "httpx>=0.28",
    "structlog>=24.0",  # optional — falls back to stdlib logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
hivemind = "hivemind.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/hivemind"]
